feat: update services and add logs